libpq-fe-v1.147.pas


function PQmakeEmptyPGresult(conn:PPGconn; status:ExecStatusType):PPGresult;cdecl;
(* Const before type ignored *)
function PQcopyResult(src:PPGresult; flags:longint):PPGresult;cdecl;
function PQsetResultAttrs(res:PPGresult; numAttributes:longint; attDescs:PPGresAttDesc):longint;cdecl;
function PQresultAlloc(res:PPGresult; nBytes:size_t):pointer;cdecl;
function PQsetvalue(res:PPGresult; tup_num:longint; field_num:longint; value:Pchar; len:longint):longint;cdecl;
{ Quoting strings before inclusion in queries.  }
(* Const before type ignored *)
function PQescapeStringConn(conn:PPGconn; to:Pchar; from:Pchar; length:size_t; error:Plongint):size_t;cdecl;
(* Const before type ignored *)
function PQescapeByteaConn(conn:PPGconn; from:Pbyte; from_length:size_t; to_length:Psize_t):Pbyte;cdecl;
(* Const before type ignored *)
function PQunescapeBytea(strtext:Pbyte; retbuflen:Psize_t):Pbyte;cdecl;
{ These forms are deprecated!  }
(* Const before type ignored *)
function PQescapeString(to:Pchar; from:Pchar; length:size_t):size_t;cdecl;
(* Const before type ignored *)
function PQescapeBytea(from:Pbyte; from_length:size_t; to_length:Psize_t):Pbyte;cdecl;
{ === in fe-print.c ===  }
{ output stream  }
(* Const before type ignored *)
(* Const before type ignored *)
procedure PQprint(fout:PFILE; res:PPGresult; ps:PPQprintOpt);cdecl;
{ option structure  }
{
 * really old printing routines
  }
(* Const before type ignored *)
{ where to send the output  }
{ pad the fields with spaces  }
(* Const before type ignored *)
{ field separator  }
{ display headers?  }
procedure PQdisplayTuples(res:PPGresult; fp:PFILE; fillAlign:longint; fieldSep:Pchar; printHeader:longint; 
            quiet:longint);cdecl;
(* Const before type ignored *)
{ output stream  }
{ print attribute names  }
{ delimiter bars  }
procedure PQprintTuples(res:PPGresult; fout:PFILE; printAttName:longint; terseOutput:longint; width:longint);cdecl;
{ width of column, if 0, use variable width  }
{ === in fe-lobj.c ===  }
{ Large-object access routines  }
function lo_open(conn:PPGconn; lobjId:Oid; mode:longint):longint;cdecl;
function lo_close(conn:PPGconn; fd:longint):longint;cdecl;
function lo_read(conn:PPGconn; fd:longint; buf:Pchar; len:size_t):longint;cdecl;
(* Const before type ignored *)
function lo_write(conn:PPGconn; fd:longint; buf:Pchar; len:size_t):longint;cdecl;
function lo_lseek(conn:PPGconn; fd:longint; offset:longint; whence:longint):longint;cdecl;
function lo_creat(conn:PPGconn; mode:longint):Oid;cdecl;
function lo_create(conn:PPGconn; lobjId:Oid):Oid;cdecl;
function lo_tell(conn:PPGconn; fd:longint):longint;cdecl;
function lo_truncate(conn:PPGconn; fd:longint; len:size_t):longint;cdecl;
function lo_unlink(conn:PPGconn; lobjId:Oid):longint;cdecl;
(* Const before type ignored *)
function lo_import(conn:PPGconn; filename:Pchar):Oid;cdecl;
(* Const before type ignored *)
function lo_import_with_oid(conn:PPGconn; filename:Pchar; lobjId:Oid):Oid;cdecl;
(* Const before type ignored *)
function lo_export(conn:PPGconn; lobjId:Oid; filename:Pchar):longint;cdecl;
{ === in fe-misc.c ===  }
{ Determine length of multibyte encoded char at *s  }
(* Const before type ignored *)
function PQmblen(s:Pchar; encoding:longint):longint;cdecl;
{ Determine display length of multibyte encoded char at *s  }
(* Const before type ignored *)
function PQdsplen(s:Pchar; encoding:longint):longint;cdecl;
{ Get encoding id from environment variable PGCLIENTENCODING  }
function PQenv2encoding:longint;cdecl;
{ === in fe-auth.c ===  }
(* Const before type ignored *)
(* Const before type ignored *)
function PQencryptPassword(passwd:Pchar; user:Pchar):Pchar;cdecl;
{ === in encnames.c ===  }
(* Const before type ignored *)
function pg_char_to_encoding(name:Pchar):longint;cdecl;
(* Const before type ignored *)
function pg_encoding_to_char(encoding:longint):Pchar;cdecl;
function pg_valid_server_encoding_id(encoding:longint):longint;cdecl;
{ C++ end of extern C conditionnal removed }
{$endif}
{ LIBPQ_FE_H  }

implementation

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function PQsetdb(M_PGHOST,M_PGPORT,M_PGOPT,M_PGTTY,M_DBNAME : longint) : longint;
begin
  PQsetdb:=PQsetdbLogin(M_PGHOST,M_PGPORT,M_PGOPT,M_PGTTY,M_DBNAME,NULL,NULL);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function PQfreeNotify(ptr : longint) : longint;
begin
  PQfreeNotify:=PQfreemem(ptr);
end;


end.
